# mcp_tools

./: .gitignore  LICENSE  README.md
arxiv/: README.md  pyproject.toml
arxiv/src/mcp_arxiv_tools/: __init__.py
browser/: README.md  pyproject.toml
browser/src/mcp_browser_tools/: __init__.py
browser/src/mcp_browser_tools/browser/: __init__.py  tools.py
claude-tools/: implement-tool.md  new-tool.md
database/: README.md  pyproject.toml
database/src/mcp_database_tools/: __init__.py
database/src/mcp_database_tools/database/: __init__.py  client.py  tools.py
docker/: README.md  pyproject.toml
docker/src/mcp_docker_tools/: __init__.py
docker/src/mcp_docker_tools/docker/: __init__.py  client.py  tools.py
email/: README.md  pyproject.toml
email/src/mcp_email_tools/: __init__.py
email/src/mcp_email_tools/email/: __init__.py  client.py  tools.py
finance/: README.md  pyproject.toml
finance/src/mcp_finance_tools/: __init__.py
finance/src/mcp_finance_tools/finance/: __init__.py  client.py  tools.py
git/: README.md  pyproject.toml
git/src/mcp_git_tools/: __init__.py
git/src/mcp_git_tools/git/: __init__.py  tools.py
homeassistant/: README.md  pyproject.toml
homeassistant/src/mcp_homeassistant_tools/: __init__.py
homeassistant/src/mcp_homeassistant_tools/homeassistant/: __init__.py  client.py  tools.py
homematic/: README.md  pyproject.toml
homematic/src/mcp_homematic_tools/: __init__.py
homematic/src/mcp_homematic_tools/homematic/: __init__.py  client.py  convenience.py  device.py  interface.py  program.py  room.py  system.py  sysvar.py  tools.py
http/: README.md  pyproject.toml
http/src/mcp_http_tools/: __init__.py
http/src/mcp_http_tools/http/: __init__.py  client.py  tools.py
image/: README.md  pyproject.toml
image/src/mcp_image_tools/: __init__.py
image/src/mcp_image_tools/image/: __init__.py  tools.py
jupyter/: README.md  pyproject.toml
jupyter/src/mcp_jupyter_tools/: __init__.py
jupyter/src/mcp_jupyter_tools/jupyter/: __init__.py  client.py  tools.py
mattermost/: README.md  pyproject.toml
mqtt/: README.md  pyproject.toml
mqtt/src/mcp_mqtt_tools/: __init__.py
mqtt/src/mcp_mqtt_tools/mqtt/: __init__.py  client.py  tools.py
obsidian/: README.md  pyproject.toml
obsidian/src/mcp_obsidian_tools/: __init__.py
obsidian/src/mcp_obsidian_tools/obsidian/: __init__.py  tools.py
paperless/: README.md  pyproject.toml
paperless/src/mcp_paperless_tools/: __init__.py
paperless/src/mcp_paperless_tools/paperless/: __init__.py  client.py  tools.py
playwright/: README.md  pyproject.toml  requirements.txt
playwright/src/mcp_playwright_tools/: __init__.py
playwright/src/mcp_playwright_tools/playwright/: __init__.py  client.py  tools.py
playwright/src/mcp_playwright_tools/playwright/tools/: __init__.py  browser.py  content.py  interaction.py  locators.py  navigation.py
prometheus/: README.md  pyproject.toml
prometheus/src/mcp_prometheus_tools/: __init__.py
prometheus/src/mcp_prometheus_tools/prometheus/: __init__.py  client.py  tools.py
python/: README.md  pyproject.toml
python/src/mcp_python_tools/: __init__.py
python/src/mcp_python_tools/python/: __init__.py  tools.py
rss/: README.md  pyproject.toml
scraper/: README.md  pyproject.toml
scraper/src/mcp_scraper_tools/: __init__.py
scraper/src/mcp_scraper_tools/scraper/: __init__.py  client.py  tools.py
scripts/: new-tool.py
shell/: README.md  pyproject.toml
shell/src/mcp_shell_tools/: __init__.py
shell/src/mcp_shell_tools/shell/: __init__.py  _history.py  _state.py  editor.py  filesystem.py  git.py  http.py  search.py  services.py  shell.py  system.py  tools.py
stories/: _template.yaml  arxiv.yaml  browser.yaml  database.yaml  docker.yaml  email.yaml  finance.yaml  git.yaml  homeassistant.yaml  http.yaml  jupyter.yaml  mattermost.yaml  metapackages.yaml  mqtt.yaml  obsidian.yaml  paperless.yaml  prometheus.yaml  python.yaml  rss.yaml  scraper.yaml  shell.yaml  systemd.yaml  traefik.yaml  wekan.yaml  wikipedia.yaml
systemd/: README.md  pyproject.toml
systemd/src/mcp_systemd_tools/: __init__.py
systemd/src/mcp_systemd_tools/systemd/: __init__.py  tools.py
tests/test_arxiv/: test_arxiv.py
tests/test_browser/: test_browser.py
tests/test_database/: test_database.py
tests/test_docker/: test_docker.py
tests/test_email/: test_email.py
tests/test_finance/: test_finance.py
tests/test_git/: test_git.py
tests/test_homeassistant/: test_homeassistant.py
tests/test_homematic/: conftest.py  test_homematic.py
tests/test_http/: test_http.py
tests/test_image/: test_image.py
tests/test_jupyter/: test_jupyter.py
tests/test_mqtt/: test_mqtt.py
tests/test_obsidian/: test_obsidian.py
tests/test_paperless/: test_paperless.py
tests/test_playwright/: test_playwright.py
tests/test_prometheus/: test_prometheus.py
tests/test_python/: test_python.py
tests/test_rss/: test_rss.py
tests/test_scraper/: test_scraper.py
tests/test_shell/: test_shell.py
tests/test_systemd/: test_systemd.py
tests/test_traefik/: test_traefik.py
tests/test_wikipedia/: test_wikipedia.py
tools/: mcp_client.py  testclient.py
traefik/: README.md  pyproject.toml
traefik/src/mcp_traefik_tools/: __init__.py
traefik/src/mcp_traefik_tools/traefik/: __init__.py  client.py  tools.py
vault/: README.md  pyproject.toml
vault/docs/: SKILL.md  TOOLS.md  USECASES.md
vault/src/mcp_vault_tools/: __init__.py
vault/src/mcp_vault_tools/vault/: __init__.py  index.py  parser.py  registry.py  tools.py
vault/src/mcp_vault_tools/vault/tools/: __init__.py  _helpers.py  analysis.py  composites.py  crud.py  editing.py  frontmatter.py  graph.py  links.py  refactoring.py  search.py
vault/tests/: conftest.py  test_index.py  test_tools.py
wekan/: README.md  pyproject.toml
wekan/src/mcp_wekan_tools/: __init__.py
wekan/src/mcp_wekan_tools/wekan/: __init__.py  client.py  tools.py
wikipedia/: README.md  pyproject.toml
wikipedia/src/mcp_wikipedia_tools/: __init__.py
wikipedia/src/mcp_wikipedia_tools/wikipedia/: __init__.py  client.py  tools.py
(+10 files in other folders)
