    [project]
    name = "mcp-database-tools"
    version = "1.0.0"
    description = "Database tools for MCP — query, schema, export for SQLite and PostgreSQL"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
    ]
    keywords = ["mcp", "database", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"aiosqlite>=0.19.0",
"asyncpg>=0.29.0",
    ]

    [project.urls]
    Homepage = "https://github.com/cuber-it/mcp_tools"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-database-tools = "mcp_database_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_database_tools"]
