    [project]
    name = "mcp-docker-tools"
    version = "1.0.0"
    description = "Container management tools for MCP — containers, images, volumes, compose"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Berkmueller", email = "ulrich@cuber-it.de" },
    ]
    keywords = ["mcp", "docker", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"docker>=7.0.0",
    ]

    [project.urls]
    Homepage = "https://github.com/cuber-it/mcp_tools"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-docker-tools = "mcp_docker_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_docker_tools"]
