[project]
name = "mcp-git-tools"
version = "1.0.0"
description = "Git version control tools for MCP — status, log, diff, commit, branch, stash, remote, blame"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
]
keywords = ["mcp", "git", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp-server-framework>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/cuber-it/mcp_tools"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-git-tools = "mcp_git_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_git_tools"]
