    [project]
    name = "mcp-homeassistant-tools"
    version = "1.0.0"
    description = "Home Assistant tools for MCP — entities, services, automations, history"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Berkmueller", email = "ulrich@cuber-it.de" },
    ]
    keywords = ["mcp", "homeassistant", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"httpx>=0.26.0",
    ]

    [project.urls]
    Homepage = "https://www.uc-it.de"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-homeassistant-tools = "mcp_homeassistant_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_homeassistant_tools"]
