[project]
name = "mcp-homematic-tools"
version = "1.0.2"
description = "60 HomeMatic/OpenCCU tools for MCP — full JSON-RPC API coverage for devices, channels, rooms, programs, system variables, events, and system management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
]
keywords = ["mcp", "homematic", "ccu", "smarthome", "iot", "tools", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp-server-framework>=1.4.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://www.uc-it.de"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-homematic-tools = "mcp_homematic_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_homematic_tools"]
