    [project]
    name = "mcp-http-tools"
    version = "1.0.0"
    description = "HTTP client tools for MCP — requests, JSON, downloads, headers, status checks"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
    ]
    keywords = ["mcp", "http", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"httpx>=0.26.0",
    ]

    [project.urls]
    Homepage = "https://github.com/cuber-it/mcp_tools"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-http-tools = "mcp_http_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_http_tools"]
