[project]
name = "mcp-obsidian-tools"
version = "1.0.0"
description = "Obsidian vault tools for MCP — read, write, search, links, tags, frontmatter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
]
keywords = ["mcp", "obsidian", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp-server-framework>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/cuber-it/mcp_tools"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-obsidian-tools = "mcp_obsidian_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obsidian_tools"]
