    [project]
    name = "mcp-scraper-tools"
    version = "1.0.0"
    description = "Web scraping tools for MCP — fetch pages, extract content, parse metadata"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
    ]
    keywords = ["mcp", "scraper", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"httpx>=0.26.0",
"beautifulsoup4>=4.12.0",
    ]

    [project.urls]
    Homepage = "https://www.uc-it.de"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-scraper-tools = "mcp_scraper_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_scraper_tools"]
