[project]
name = "mcp-shell-tools"
version = "4.0.2"
description = "26 workstation tools for MCP — filesystem, editor, search, shell, system diagnostics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
]
keywords = ["mcp", "shell", "tools", "filesystem", "workstation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp-server-framework>=1.4.0",
]

[project.urls]
Homepage = "https://www.uc-it.de"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-shell-tools = "mcp_shell_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_shell_tools"]
