    [project]
    name = "mcp-traefik-tools"
    version = "1.0.0"
    description = "Traefik reverse proxy tools for MCP — routers, services, middlewares, certs"
    readme = "README.md"
    license = "MIT"
    requires-python = ">=3.10"
    authors = [
        { name = "Ulrich Berkmueller", email = "ulrich@cuber-it.de" },
    ]
    keywords = ["mcp", "traefik", "tools"]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "mcp-server-framework>=1.3.0",
"httpx>=0.26.0",
    ]

    [project.urls]
    Homepage = "https://www.uc-it.de"
    Repository = "https://github.com/cuber-it/mcp_tools"

    [project.scripts]
    mcp-traefik-tools = "mcp_traefik_tools:main"

    [build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

    [tool.hatch.build.targets.wheel]
    packages = ["src/mcp_traefik_tools"]
