[project]
name = "mcp-vault-tools"
version = "1.0.0"
description = "63 headless Obsidian-compatible vault tools for MCP — CRUD, search, links, tags, graph analysis, refactoring, multi-vault"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Cuber", email = "sonstige@uc-it.de" },
]
keywords = ["mcp", "vault", "obsidian", "markdown", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp-server-framework>=1.4.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://mcp-tools.dev"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-vault-tools = "mcp_vault_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_vault_tools"]
