[project]
name = "mcp-wekan-tools"
version = "1.0.0"
description = "MCP tools for Wekan Kanban — boards, lists, cards, checklists, labels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ulrich Berkmueller", email = "ulrich@cuber-it.de" },
]
keywords = ["mcp", "wekan", "kanban", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp-server-framework>=1.2.1",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/cuber-it/mcp_tools"
Repository = "https://github.com/cuber-it/mcp_tools"

[project.scripts]
mcp-wekan-tools = "mcp_wekan_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_wekan_tools"]
